--- a/yolov7/data/AICUP.yaml
+++ b/yolov7/data/AICUP.yaml
@@ -1,6 +1,6 @@
 # train and val data as 1) directory: path/images/, 2) file: path/images.txt, or 3) list: [path1/images/, path2/images/]
-train: D:/AICUP2024/SpringSeason/Cardetection/AICUP-Yolov7/train
-val: D:/AICUP2024/SpringSeason/Cardetection/AICUP-Yolov7/valid
+train: AICUP-Yolov7/train
+val: AICUP-Yolov7/valid
 
 # number of classes
 nc: 1
